fix spacing for updateTweet div

--- a/twittler/style/style.css
+++ b/twittler/style/style.css
@@ -128,7 +128,7 @@ a:hover {
 }
 
 .updateTweet {
-  height: 60px;
+  height: 55px;
   background-color: #E8F5FD;
 }
 
